<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".RegisterAccount">

    <Button
        android:id="@+id/btn_registeraccount_registeraccount"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#090C08"
        android:fontFamily="@font/lato"
        android:text="Cadastrar"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_registeraccountactivity_password" />

    <EditText
        android:id="@+id/editText_registeraccountactivity_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#8A8A8A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_registeraccountactivity_name"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editText_registeraccountactivity_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="Senha"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#8A8A8A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_registeraccountactivity_email"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editText_registeraccountactivity_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/nome"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="#8A8A8A"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="24dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_forgotpassactivity_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#fff"
            android:contentDescription="Voltar para a tela anterior"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lato_bold"
            android:paddingStart="8dp"
            android:text="@string/cadastro_de_conta"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:lines="2"
        android:text="@string/insira_seus_dados_pessoais_para_fazer_o_cadastro_na_plataforma"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>